tests/ui/postgres/deprecated_rename.stderr
error: trybuild test needs to fail for stderr checking
  --> $DIR/deprecated_rename.rs:10:5
   |
10 |     compile_error!("trybuild test needs to fail for stderr checking");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated function `bk-sqlx::_rename`: `#[bk-sqlx(rename = "...")]` is now `#[bk-sqlx(type_name = "...")`
 --> $DIR/deprecated_rename.rs:2:8
  |
2 | #[bk-sqlx(rename = "foo")]
  |        ^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default
